[[tool.uv.index]]
name = "vip"
url = "http://pypi.vip.vip.com/simple"
default = true

[project]
name = "goaway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.25.0",
    "diffusers==0.37.1",
    "einops>=0.8.1",
    "imageio[ffmpeg,pyav]>=2.37.0",
    "opencv-python-headless==4.11.0.86",
    "peft>=0.15.0",
    "safetensors>=0.5.3",
    "scikit-image>=0.25.2",
    "sentencepiece>=0.2.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "transformers==5.5.4",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
